Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: study-app-service
spec:
  selector:
    app: study-app
  ports:
    - port: 8081
      targetPort: 8081
