Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: study-app-route
spec:
  to:
    kind: Service
    name: study-app-service
  port:
    targetPort: 8081
